// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mysql basic introspection --url 2`] = `
datasource db {
  provider = "mysql"
  url      = "mysql://root:root@localhost:3306/tests"
}

model your_log {
  click_id     Int      @id @default(autoincrement())
  click_time   DateTime @db.DateTime(0)
  shorturl     String   @db.VarChar(200)
  referrer     String   @db.VarChar(200)
  user_agent   String   @db.VarChar(255)
  ip_address   String   @db.VarChar(41)
  country_code String   @db.Char(2)

  @@index([shorturl], map: "shorturl")
}

model your_options {
  option_id    BigInt @default(autoincrement()) @db.UnsignedBigInt
  option_name  String @default("") @db.VarChar(64)
  option_value String @db.LongText

  @@id([option_id, option_name])
  @@index([option_name], map: "option_name")
}

model your_url {
  keyword   String   @id @db.VarChar(200)
  url       String   @db.Text
  title     String?  @db.Text
  timestamp DateTime @default(now()) @db.Timestamp(0)
  ip        String   @db.VarChar(41)
  clicks    Int      @db.UnsignedInt

  @@index([ip], map: "ip")
  @@index([timestamp], map: "timestamp")
}


// introspectionSchemaVersion: NonPrisma,
`;

exports[`mysql basic introspection 2`] = `
datasource db {
  provider = "mysql"
  url      = env("TEST_MYSQL_URI")
}

model your_log {
  click_id     Int      @id @default(autoincrement())
  click_time   DateTime @db.DateTime(0)
  shorturl     String   @db.VarChar(200)
  referrer     String   @db.VarChar(200)
  user_agent   String   @db.VarChar(255)
  ip_address   String   @db.VarChar(41)
  country_code String   @db.Char(2)

  @@index([shorturl], map: "shorturl")
}

model your_options {
  option_id    BigInt @default(autoincrement()) @db.UnsignedBigInt
  option_name  String @default("") @db.VarChar(64)
  option_value String @db.LongText

  @@id([option_id, option_name])
  @@index([option_name], map: "option_name")
}

model your_url {
  keyword   String   @id @db.VarChar(200)
  url       String   @db.Text
  title     String?  @db.Text
  timestamp DateTime @default(now()) @db.Timestamp(0)
  ip        String   @db.VarChar(41)
  clicks    Int      @db.UnsignedInt

  @@index([ip], map: "ip")
  @@index([timestamp], map: "timestamp")
}


// introspectionSchemaVersion: NonPrisma,
`;
